build: downgrade java target to 17 and fix compatibility in EvaluationEngine